--- a/index.html
+++ b/index.html
@@ -76,13 +76,20 @@
 
                 <p>O pedido de casamento, com direito a música tema da relação. Muito choro e muito amor.</p>
 
-                <p>Ninguém sabe o que o futuro reserva, mas do jeito que ambos querem bem um ao outro, há a certeza de
+                <p>Ninguém sabe o que o futuro reserva, mas da maneira que ambos querem bem um ao outro, há a certeza de
                     muitas alegrias, viagens, shows, beijos. Sempre crescendo e levando o outro bem perto, bem ao
                     lado.</p>
-
             </div>
         </section>
     </section>
+    <section class="content">
+        <section class="padrinhos">
+            <div class="">
+                <h3>Padrinhos</h3>
+            </div>
+        </section>
+    </section>
+
 </main>
 <footer>
     <ul>
@@ -91,5 +98,6 @@
         <li><a target="_blank" href="http://instagram.com/nathaliamcedo__">Follow Nathy on Instagram</a></li>
     </ul>
 </footer>
+<script type="text/javascript" src="js/fb.js"></script>
 </body>
 </html>
