--- a/index.html
+++ b/index.html
@@ -18,78 +18,216 @@
     </div>
 </header>
 <main>
-    <section class="content">
-        <section class="hero">
-            <article class="description">
-                <!--<h2>Nós vamos nos casar</h2>!-->
+<section class="content">
+    <section class="hero">
+        <article class="description">
+            <!--<h2>Nós vamos nos casar</h2>!-->
 
-                <p>25 de Julho de 2015, Bella Eventos. Goiânia, Goiás</p>
-            </article>
-        </section>
+            <p>25 de Julho de 2015, Bella Eventos. Goiânia, Goiás</p>
+        </article>
     </section>
-    <section class="content">
-        <section class="about">
-            <div class="about__noivos">
-                <h3>O noivo</h3>
-                <h4>Hellison Teodoro de Oliveira</h4>
+</section>
+<section class="content">
+    <section class="about">
+        <div class="about__noivos">
+            <h3>O noivo</h3>
+            <h4>Hellison Teodoro de Oliveira</h4>
 
-                <p>
-                    Nascido em Formosa, Goiás. Mudou-se para a capital em 1995 e daqui não quis mais sair. Formou-se em
-                    Direito
-                    enquanto morava longe dos pais e dividia um apartamento com o primo Wally e posteriormente com outro
-                    primo, Karlyson.
-                    Não satisfeito com o curso, foi atrás de novos desafios e concluiu o segundo curso superior, agora
-                    na área de TI.
-                    Essa sim uma paixão que sempre possuiu. O curso, Análise e desenvolvimento de Software.
-                </p>
+            <p>
+                Nascido em Formosa, Goiás. Mudou-se para a capital em 1995 e daqui não quis mais sair. Formou-se em
+                Direito
+                enquanto morava longe dos pais e dividia um apartamento com o primo Wally e posteriormente com outro
+                primo, Karlyson.
+                Não satisfeito com o curso, foi atrás de novos desafios e concluiu o segundo curso superior, agora
+                na área de TI.
+                Essa sim uma paixão que sempre possuiu. O curso, Análise e desenvolvimento de Software.
+            </p>
 
-                <p>Nerd! Adora jogos, filmes e séries</p>
-            </div>
-            <div class="about__noivos">
-                <h3>A noiva</h3>
-                <h4>Nathália Isabel de Carvalho Macedo</h4>
+            <p>Nerd! Adora jogos, filmes e séries</p>
+        </div>
+        <div class="about__noivos">
+            <h3>A noiva</h3>
+            <h4>Nathália Isabel de Carvalho Macedo</h4>
 
-                <p>
-                    Nascida e criada em Goiânia. Trabalha desde os 15 anos, sempre responsável enche de orgulho a mãe.
-                    Estudou no colégio militar e diferente do noivo, sempre soube o que queria. Graduada em turismo
-                    possuí bastante experiência naquela área, desde agências à consolidadoras.
-                    Já merece um cargo de gerência
-                </p>
+            <p>
+                Nascida e criada em Goiânia. Trabalha desde os 15 anos, sempre responsável enche de orgulho a mãe.
+                Estudou no colégio militar e diferente do noivo, sempre soube o que queria. Graduada em turismo
+                possuí bastante experiência naquela área, desde agências à consolidadoras.
+                Já merece um cargo de gerência
+            </p>
 
-                <p>Romântica, gosta de Grey's Anatomy </p>
-            </div>
-        </section>
+            <p>Romântica, gosta de Grey's Anatomy </p>
+        </div>
     </section>
-    <section class="content">
-        <section class="love">
-            <div class="">
-                <h3>Love!</h3>
+</section>
+<section class="content">
+    <section class="love">
+        <div class="">
+            <h3>Love!</h3>
 
-                <p>O casal fazia parte do mesmo círculo de amizades, porém não se conheciam. Até uma certa festa.
-                    Sinceramente não rolou interesse por parte de nenhum dos dois.
-                    Ambos estavam com olhos em outras pessoas, mas foi nessa festa que rolou uma foto e uma troca de
-                    contatos. Veio o show, o primeiro beijo, ficadas, separação, o reecontro e claro, o namoro.</p>
+            <p>O casal fazia parte do mesmo círculo de amizades, porém não se conheciam. Até uma certa festa.
+                Sinceramente não rolou interesse por parte de nenhum dos dois.
+                Ambos estavam com olhos em outras pessoas, mas foi nessa festa que rolou uma foto e uma troca de
+                contatos. Veio o show, o primeiro beijo, ficadas, separação, o reecontro e claro, o namoro.</p>
 
-                <p>8 Anos se passaram, muitas coisas aconteceram, o amadurecimento de dois jovens totalmente
-                    despretensiosos e que nunca imaginavam que ficariam juntos por tanto tempo.
-                </p>
+            <p>8 Anos se passaram, muitas coisas aconteceram, o amadurecimento de dois jovens totalmente
+                despretensiosos e que nunca imaginavam que ficariam juntos por tanto tempo.
+            </p>
 
-                <p>O pedido de casamento, com direito a música tema da relação. Muito choro e muito amor.</p>
+            <p>O pedido de casamento, com direito a música tema da relação. Muito choro e muito amor.</p>
 
-                <p>Ninguém sabe o que o futuro reserva, mas da maneira que ambos querem bem um ao outro, há a certeza de
-                    muitas alegrias, viagens, shows, beijos. Sempre crescendo e levando o outro bem perto, bem ao
-                    lado.</p>
-            </div>
-        </section>
+            <p>Ninguém sabe o que o futuro reserva, mas da maneira que ambos querem bem um ao outro, há a certeza de
+                muitas alegrias, viagens, shows, beijos. Sempre crescendo e levando o outro bem perto, bem ao
+                lado.</p>
+        </div>
     </section>
-    <section class="content">
-        <section class="padrinhos">
-            <div class="">
-                <h3>Padrinhos</h3>
-            </div>
-        </section>
-    </section>
+</section>
+<section class="content">
+    <div class="padrinhos">
+        <h3>Padrinhos</h3>
 
+        <div class="padrinhos__album">
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/eliene.lemes.39/picture?type=normal);">
+                </div>
+                <article class="description">
+                    <p>Carlison & Eliene</p>
+                </article>
+            </div>
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/lucianaevinicius.godoi/picture?type=normal);">
+                </div>
+                <article class="description">
+                    <p>Luciana & Vinícius</p>
+                </article>
+            </div>
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/alessandra.macedo.3114/picture?type=normal);">
+
+                </div>
+                <article class="description">
+                    <p>Alessandra Macedo</p>
+                </article>
+            </div>
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/marcos.xavier.712/picture?type=normal);">
+                </div>
+                <article class="description">
+                    <p>Marcos Xavier</p>
+                </article>
+            </div>
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/isabela.carvalho.79/picture?type=normal);">
+                </div>
+                <article class="description">
+                    <p>Isabela Carvalho</p>
+                </article>
+            </div>
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/israel.macedo.75/picture?type=normal);">
+                </div>
+                <article class="description">
+                    <p>Israel Macedo</p>
+                </article>
+            </div>
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/oliveiraviinicius/picture?type=normal);">
+                </div>
+                <article class="description">
+                    <p>Vinicius Oliveira</p>
+                </article>
+            </div>
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/luciana.a.delima.9/picture?type=normal);">
+                </div>
+                <article class="description">
+                    <p>Luciana Alves de Lima</p>
+                </article>
+            </div>
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/100006467019333/picture?type=normal);">
+
+                </div>
+                <article class="description">
+                    <p>Vinícius Nascimento</p>
+                </article>
+            </div>
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/patricia.lima.90/picture?type=normal);">
+
+                </div>
+                <article class="description">
+                    <p>Patricia Lima</p>
+                </article>
+            </div>
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/keyla.lopesdeoliveira/picture?type=normal);">
+
+                </div>
+                <article class="description">
+                    <p>Dilvan & Keyla </p>
+                </article>
+            </div>
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/ismaelmacedojr/picture?type=normal);">
+
+                </div>
+                <article class="description">
+                    <p>Ismael Macedo</p>
+                </article>
+            </div>
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/michelle.santana.5686/picture?type=normal);">
+
+                </div>
+                <article class="description">
+                    <p>Michele Santana</p>
+                </article>
+            </div>
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/hallam.godinho/picture?type=normal);">
+                    <
+                </div>
+                <article class="description">
+                    <p>Hallam Godinho</p>
+                </article>
+            </div>
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/brenno.miranda.98/picture?type=normal);">
+                </div>
+                <article class="description">
+                    <p>Brenno Miranda</p>
+                </article>
+            </div>
+
+            <div>
+                <div class="padrinho_pic"
+                     style="background-image: url(http://graph.facebook.com/angelica.carvalho.santanna/picture?type=normal);">
+
+                </div>
+                <article class="description">
+                    <p>Angélica Santanna</p>
+                </article>
+            </div>
+
+        </div>
+    </div>
+</section>
 </main>
 <footer>
     <ul>
@@ -99,5 +237,10 @@
     </ul>
 </footer>
 <script type="text/javascript" src="js/fb.js"></script>
+<script>
+    /* make the API call */
+
+</script>
 </body>
+
 </html>
