--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href='http://fonts.googleapis.com/css?family=Petit+Formal+Script' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Titillium+Web' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" media="screen and (max-width : 320px) " href="css/styleSmall.css">
     <title>Sejam bem vindos!</title>
 </head>
 <body>
@@ -32,7 +33,6 @@
         <div class="about__noivos">
             <h3>O noivo</h3>
             <h4>Hellison Teodoro de Oliveira</h4>
-
             <p>
                 Nascido em Formosa, Goiás. Mudou-se para a capital em 1995 e daqui não quis mais sair. Formou-se em
                 Direito
@@ -200,7 +200,6 @@
             <div>
                 <div class="padrinho_pic"
                      style="background-image: url(http://graph.facebook.com/hallam.godinho/picture?type=normal);">
-                    <
                 </div>
                 <article class="description">
                     <p>Hallam Godinho</p>
@@ -228,19 +227,42 @@
         </div>
     </div>
 </section>
+<section class="content">
+    <h3 class="casamento-title">O Casamento</h3>
+    <div class="casamento">
+        <div class="casamento__cerimonia">
+            <img src="images/ceremony.png" alt="cerimonia"/>
+
+            <h3>Cerimônia <span>17:30</span></h3>
+            <h4>Bella Eventos</h4>
+
+            <p>O casal realizará a troca de alianças às 17:30pm.</p>
+        </div>
+        <div class="casamento__festa">
+            <img src="images/cocktails.png" alt="festa"/>
+
+            <h3>Festa <span>18:30pm</span></h3>
+            <h4>Bella Eventos</h4>
+
+            <p>A celebração começa de verdade. Bebidas liberadas e logo depois a pista de dança.</p>
+        </div>
+        <div class="casamento__jantar">
+            <img src="images/reception.png" alt="jantar"/>
+
+            <h3>Jantar <span>20:00</span></h3>
+            <h4>Bella Eventos</h4>
+
+            <p>O jantar será servido. O cardápio é composto por: Salmão e suhi da lua!</p>
+        </div>
+    </div>
+</section>
 </main>
 <footer>
     <ul>
-        <li><a href="mailto:hellison.oliveira@gmail.com">Contact us</a></li>
-        <li><a target="_blank" href="http://instagram.com/hlteodoro">Follow Hellin on Instagram</a></li>
-        <li><a target="_blank" href="http://instagram.com/nathaliamcedo__">Follow Nathy on Instagram</a></li>
+        <li><a href="mailto:hellison.oliveira@gmail.com">Contato</a></li>
+        <li><a target="_blank" href="http://instagram.com/hlteodoro">Siga o Hellin no Instagram</a></li>
+        <li><a target="_blank" href="http://instagram.com/nathaliamcedo__">Siga a Nathy no Instagram</a></li>
     </ul>
 </footer>
-<script type="text/javascript" src="js/fb.js"></script>
-<script>
-    /* make the API call */
-
-</script>
 </body>
-
 </html>
