--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <div class="about__noivos">
             <h3>O noivo</h3>
             <h4>Hellison Teodoro de Oliveira</h4>
+
             <p>
                 Nascido em Formosa, Goiás. Mudou-se para a capital em 1995 e daqui não quis mais sair. Formou-se em
                 Direito
@@ -229,9 +230,10 @@
 </section>
 <section class="content">
     <h3 class="casamento-title">O Casamento</h3>
+
     <div class="casamento">
         <div class="casamento__cerimonia">
-            <img src="images/ceremony.png" alt="cerimonia"/>
+            <img src="images/5456-200.png" alt="cerimonia"/>
 
             <h3>Cerimônia <span>17:30</span></h3>
             <h4>Bella Eventos</h4>
@@ -239,7 +241,7 @@
             <p>O casal realizará a troca de alianças às 17:30pm.</p>
         </div>
         <div class="casamento__festa">
-            <img src="images/cocktails.png" alt="festa"/>
+            <img src="images/80611-200.png" alt="festa"/>
 
             <h3>Festa <span>18:30pm</span></h3>
             <h4>Bella Eventos</h4>
@@ -247,12 +249,27 @@
             <p>A celebração começa de verdade. Bebidas liberadas e logo depois a pista de dança.</p>
         </div>
         <div class="casamento__jantar">
-            <img src="images/reception.png" alt="jantar"/>
+            <img src="images/105603-200.png" alt="jantar"/>
 
             <h3>Jantar <span>20:00</span></h3>
             <h4>Bella Eventos</h4>
 
             <p>O jantar será servido. O cardápio é composto por: Salmão e suhi da lua!</p>
+        </div>
+    </div>
+</section>
+<section class="content">
+    <h3 class="casamento-title">Obrigado</h3>
+
+    <div class="presentes">
+        <div style="text-align: center;">
+
+            <img src="images/77147-200.png" alt="presentes" class="presentes__logo"/><br>
+            Ficariamos honrados em receber presentes de pessoas tão especiais, elaborados 3 listas com opções diferente.
+            Para visualizar as listas, basta clicar nas imagens abaixo.
+        </div>
+        <div style="background: url('images/goianita.png') no-repeat" class="lojas_container">
+            <a target="_blank" href="http://instagram.com/hlteodoro" class="lojas"></a>
         </div>
     </div>
 </section>
