--- a/index.html
+++ b/index.html
@@ -258,27 +258,33 @@
         </div>
     </div>
 </section>
-<section class="content">
-    <h3 class="casamento-title">Obrigado</h3>
+<!--<section class="content">-->
+<!--<h3 class="casamento-title">Obrigado</h3>-->
 
-    <div class="presentes">
-        <div style="text-align: center;">
+<!--<div class="presentes">-->
+<!--<div style="text-align: center;">-->
 
-            <img src="images/77147-200.png" alt="presentes" class="presentes__logo"/><br>
-            Ficariamos honrados em receber presentes de pessoas tão especiais, elaborados 3 listas com opções diferente.
-            Para visualizar as listas, basta clicar nas imagens abaixo.
-        </div>
-        <div style="background: url('images/goianita.png') no-repeat" class="lojas_container">
-            <a target="_blank" href="http://instagram.com/hlteodoro" class="lojas"></a>
-        </div>
-    </div>
-</section>
+<!--<img src="images/77147-200.png" alt="presentes" class="presentes__logo"/><br>-->
+<!--Ficariamos honrados em receber presentes de pessoas tão especiais, elaborados 3 listas com opções diferente.-->
+<!--Para visualizar as listas, basta clicar nas imagens abaixo.-->
+<!--</div>-->
+<!--<div style="background: url('images/goianita.png') no-repeat" class="lojas_container">-->
+<!--<a target="_blank" href="http://instagram.com/hlteodoro" class="lojas"></a>-->
+<!--</div>-->
+<!--</div>-->
+<!--</section>-->
 </main>
 <footer>
     <ul>
-        <li><a href="mailto:hellison.oliveira@gmail.com">Contato</a></li>
-        <li><a target="_blank" href="http://instagram.com/hlteodoro">Siga o Hellin no Instagram</a></li>
-        <li><a target="_blank" href="http://instagram.com/nathaliamcedo__">Siga a Nathy no Instagram</a></li>
+        <li><a href="mailto:hellison.oliveira@gmail.com" class="ig-b- inbox"></a>
+            <br>Contato
+        </li>
+        <li><a href="http://instagram.com/hlteodoro?ref=badge"  target="_blank" class="ig-b- ig-b-48"></a>
+            <br>Hellison
+        </li>
+        <li><a href="http://instagram.com/nathaliamacedo__?ref=badge" target="_blank" class="ig-b- ig-b-48"></a>
+            <br>Nathália
+        </li>
     </ul>
 </footer>
 </body>
