--- a/index.html
+++ b/index.html
@@ -259,29 +259,28 @@
 
 
         <div class="presentes">
-            <div style="text-align: center; width: 100% ;">
+            <div class="full__center">
                 <h4>Lista de Presentes</h4>
-                <img src="images/77147-200.png" alt="presentes" class="presentes__logo"/><br>
                 <p>Ficariamos honrados em receber presentes de pessoas tão especiais, elaboramos 3 listas com opções variadas.
                 Para visualizar, basta clicar nas imagens abaixo.</p>
             </div>
             <div class="presente">
-                <img src="images/goianita.png" alt="lista goianita">
+                <img src="images/pf26983959.png" alt="logo ponto frio">
+                <a target="_blank" href="http://www.pontofrio.com.br/Site/ListaGerenciadaLandingPage.aspx?idListaCompra=436188" class="lojas"></a>
+            </div>
+            <div class="presente">
+                <img src="images/TOKSTOK.jpg" alt="logo tokstok">
                 <a target="_blank" href="http://instagram.com/hlteodoro" class="lojas"></a>
             </div>
             <div class="presente">
-                <img src="images/goianita.png" alt="lista goianita">
-                <a target="_blank" href="http://instagram.com/hlteodoro" class="lojas"></a>
-            </div>
-            <div class="presente">
-                <img src="images/goianita.png" alt="lista goianita">
-                <a target="_blank" href="http://instagram.com/hlteodoro" class="lojas"></a>
+                <img src="images/goianita.png" alt="logo magazineluiza">
+                <a target="_blank" href="https://www.querodecasamento.com.br/lista-de-casamento/hellinenathy/" class="lojas"></a>
             </div>
         </div>
         <div class="casamento">
+            <h4 class="full__center">Lista de Presentes</h4><br>
             <div class="casamento__ casamento__cerimonia">
                 <img src="images/5456-200.png" alt="cerimonia"/>
-
                 <h3>Cerimônia <span>17:30</span></h3>
                 <h4><a target="_blank" href="http://www.bellaeventosgoiania.com.br/site/"> Bella Eventos </a></h4>
                 <!--<h5>Rua 1131, N° 208 - Setor Marista - Goiânia - GO | CEP 74180-100 </h5>-->
@@ -303,6 +302,9 @@
 
                 <p>O jantar será servido. O cardápio é composto por: Salmão e suhi da lua!</p>
             </div>
+            <!--<div>-->
+                <!--<h4 class="full__center">Confirmar Presença</h4>-->
+            <!--</div>-->
             <!--<div class="lg-only casamento__ casamento__localizacao">-->
 
 
