--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <h4>Hellison Teodoro de Oliveira</h4>
 
                     <p>
-                        Nascido em Formosa, Goiás. Mudou-se para a capital em 1995 e daqui não quis mais sair.
+                        Nascido em Formosa, Goiás. Mudou-se para Goiânia em 1995 e nunca mais saiu.
                         Formou-se em Direito enquanto morava longe dos pais e dividia um apartamento com os primos Wally
                         e
                         depois Karlyson.
@@ -62,7 +62,7 @@
                         na área de TI.
                     </p>
 
-                    <p>Nerd! Adora jogos, filmes e séries</p>
+                    <p>Nerd! Adora tudo que envolve tecnologia.</p>
                 </div>
                 <div class="about__noivos noiva">
                     <h3>A noiva</h3>
@@ -76,7 +76,7 @@
                         Já merece um cargo de gerência
                     </p>
 
-                    <p>Romântica, gosta de Grey's Anatomy </p>
+                    <p>Romântica, gosta de Grey's Anatomye e Los Hermanos </p>
                 </div>
                 <div class="love">
                     <h3>Love!</h3>
@@ -98,16 +98,19 @@
                         muitas alegrias, viagens, shows, beijos. Sempre crescendo e levando o outro bem perto, bem ao
                         lado.</p>
                 </div>
+                <div class="caption"
+                     data-0="opacity: 0; transform:translate(0,0);"
+                     data-200="opacity: 0.5; transform:translate(-100%,180%);"
+                     data-250p="opacity: 0.8; transform:translate(-100%,-380%);"
+                     data-300p="opacity: 1; transform:translate(-100%,-480%);"
+                     data-anchor-target="#helper">
+                    <img src="images/heart.png">
+                </div>
             </div>
         </section>
         <section class="content">
             <div id="slide-3" class="padrinhos slide">
                 <h3>Padrinhos</h3>
-
-                <!--<div data-100p="opacity: 1; transform:translate(10%,0);"-->
-                <!--data-300p="opacity: 1; transform:translate(0,0);"-->
-                <!--data-450p="opacity: 1; transform:translate(-10%,0);"-->
-                <!--data-anchor-target="#helper"-->
                 <div data-100p="opacity: 0; transform:translate(200%,0);"
                      data-300p="opacity: 1; transform:translate(0,0);"
                      data-400p=""
@@ -259,28 +262,27 @@
         <section class="content">
             <div id="slide-4" class="slide casamento__container">
                 <h3 class="casamento-title">O Casamento</h3>
-
-
                 <div class="presentes">
                     <div class="full__center">
                         <h4>Lista de Presentes</h4>
 
-                        <p style="font-size: 15px;">Ficariamos honrados em receber presentes de pessoas tão especiais, elaboramos 3 listas com
+                        <p style="font-size: 15px;">Ficariamos honrados em receber presentes de pessoas tão especiais,
+                            elaboramos 3 listas com
                             opções variadas.
                             Para visualizar, basta clicar nas imagens abaixo.</p>
                     </div>
                     <div class="presente">
-                        <img src="images/pontofrio.jpg" alt="logo ponto frio">
+                        <img src="images/pontofrio.png" alt="logo ponto frio">
                         <a target="_blank"
                            href="http://www.pontofrio.com.br/Site/ListaGerenciadaLandingPage.aspx?idListaCompra=436188"
                            class="lojas"></a>
                     </div>
                     <div class="presente">
-                        <img src="images/TOKSTOK.jpg" alt="logo tokstok">
+                        <img src="images/TOKSTOK.png" alt="logo tokstok">
                         <a target="_blank" href="http://instagram.com/hlteodoro" class="lojas"></a>
                     </div>
                     <div class="presente">
-                        <img src="images/mgluiza.jpg" alt="logo magazineluiza">
+                        <img src="images/www-querodecasamento-com-br.jpg" alt="logo magazineluiza">
                         <a target="_blank" href="https://www.querodecasamento.com.br/lista-de-casamento/hellinenathy/"
                            class="lojas"></a>
                     </div>
@@ -315,22 +317,8 @@
                         <p>O jantar será servido. O cardápio é composto por: Salmão e suhi da lua!</p>
                     </div>
                     <!--<div>-->
-                    <!--<h4 class="full__center">Confirmar Presença</h4>-->
-                    <!--</div>-->
-                    <!--<div class="lg-only casamento__ casamento__localizacao">-->
-
-
                     <!--<h3>Localização</h3>-->
-
-                    <!--<div id="mask">-->
                     <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1910.7529725964457!2d-49.258979880945745!3d-16.701588712645464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef1172e890e2d%3A0x2f0815019960857b!2sBella+Eventos!5e0!3m2!1spt-BR!2sbr!4v1426948144832" width="100%" height="100%" frameborder="0" style="border:0"></iframe>-->
-                    <!--</div>-->
-                    <!--</div>-->
-                    <!--<div id="casamento__local" class="lg-only">-->
-                    <!--<div>-->
-                    <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1910.7529725964457!2d-49.258979880945745!3d-16.701588712645464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x935ef1172e890e2d%3A0x2f0815019960857b!2sBella+Eventos!5e0!3m2!1spt-BR!2sbr!4v1426948144832" width="400" height="300" frameborder="0" style="border:0"></iframe>-->
-                    <!--</div>-->
-                    <!--<div><img src="images/1.jpg"></div>-->
                     <!--</div>-->
 
                 </div>
@@ -339,46 +327,43 @@
         </section>
         <section>
             <div id="slide-5" class="slide footer">
-                    <video autoplay poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" id="bgvid">
-                        <!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
-                        <source src="//demosthenes.info/assets/videos/polina.webm" type="video/webm">
-                        <source src="//demosthenes.info/assets/videos/polina.mp4" type="video/mp4">
-                    </video>
-                    <div id="contato">
-                        <div>
-                            <ul>
-                                <li>
-                                    <a href="http://www.casamentos.com.br/web/hellinenathy/confirmar-presenca-17"
-                                       class="ig-b- icons presenca"></a><br>Confirme
-                                </li>
-                                <li><a href="mailto:hellison.oliveira@gmail.com" class="ig-b- icons inbox"></a>
-                                    <br>Contato
-                                </li>
-                                <li><a href="http://instagram.com/hlteodoro?ref=badge" target="_blank"
-                                       class="ig-b- ig-b-48"></a>
-                                    <br>Hellison
-                                </li>
-                                <li><a href="http://instagram.com/nathaliamacedo__?ref=badge" target="_blank"
-                                       class="ig-b- ig-b-48"></a>
-                                    <br>Nathália
-                                </li>
-                                <li><a href="https://goo.gl/maps/LzSBr" target="_blank" class="ig-b- icons maps"></a>
-                                    <br>Localização
-                                </li>
-                            </ul>
-                        </div>
+                <video autoplay poster="https://s3-us-west-2.amazonaws.com/s.cdpn.io/4273/polina.jpg" id="bgvid">
+                    <source src="//demosthenes.info/assets/videos/polina.webm" type="video/webm">
+                    <source src="//demosthenes.info/assets/videos/polina.mp4" type="video/mp4">
+                </video>
+                <div id="contato">
+                    <div>
+                        <ul class="hi-icon-wrap hi-icon-effect-8">
+                            <li>
+                                <a href="http://www.casamentos.com.br/web/hellinenathy/confirmar-presenca-17"
+                                   class="ig-b- icons presenca hi-icon"></a><br>Confirme
+                            </li>
+                            <li><a href="mailto:hellison.oliveira@gmail.com" class="ig-b- icons inbox "></a>
+                                <br>Contato
+                            </li>
+                            <li><a href="http://instagram.com/hlteodoro?ref=badge" target="_blank"
+                                   class="ig-b- ig-b-48"></a>
+                                <br>Hellison
+                            </li>
+                            <li><a href="http://instagram.com/nathaliamacedo__?ref=badge" target="_blank"
+                                   class="ig-b- ig-b-48"></a>
+                                <br>Nathália
+                            </li>
+                            <li><a href="https://goo.gl/maps/LzSBr" target="_blank" class="ig-b- icons maps"></a>
+                                <br>Localização
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
-
-        </section>
-        <div id="helper">
-            <div class="marker red"></div>
-            <div class="marker green"></div>
-            <div class="marker blue"></div>
-            <div class="marker yellow"></div>
-            <div class="marker black"></div>
-        </div>
+    </section>
+    <div id="helper">
+        <div class="marker red"></div>
+        <div class="marker green"></div>
+        <div class="marker blue"></div>
+        <div class="marker yellow"></div>
+        <div class="marker black"></div>
+    </div>
     </div>
 </main>
 
@@ -401,11 +386,11 @@
         var target2 = Math.floor(Math.random() * cards.length - 1) + 1;
         cards.eq(target).before(cards.eq(target2));
     }
-// iniciar o video com autoplay nos mobile. Porem optei por retirar do mobile
-//    var video = document.getElementById('bgvid');
-//    video.play();
-//    video.addEventListener('click',function(){
-//        video.play();
-//    },false);
+    // iniciar o video com autoplay nos mobile. Porem optei por retirar do mobile
+    //    var video = document.getElementById('bgvid');
+    //    video.play();
+    //    video.addEventListener('click',function(){
+    //        video.play();
+    //    },false);
 </script>
 </html>
